--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "appLogic": "Jogo da Memória",
   "siteUrl": "https://xxxxxx.org.br/jogodamemoria",
   "clientOrg": "Multiverso RÖÖM",
-  "clientShortName": "ADJ - Diabetes Brasil",
+  "clientShortName": "Eugenia 3.0: As Crianças CTO's - App",
   "clientSite": "https://xxxxxx.org.br/",
   "clientSocial": {
     "instagram": "https://www.instagram.com/kikobolonha/",
