--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@jaredreisinger/react-crossword": "^4.1.1",
     "@material-ui/core": "^4.12.3",
     "app-root-path": "^3.0.0",
     "chalk": "^4.1.2",
