--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-full-screen": "^1.1.0",
+    "react-h5-audio-player": "^3.8.2",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.1.2",
     "react-icons": "^4.3.1",
