--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.1.2",
     "react-icons": "^4.3.1",
+    "react-player": "^2.9.0",
     "react-responsive-carousel": "^3.2.22",
     "react-share": "^4.4.0",
     "resolve-path": "^1.4.0",
